# nrt-modules

./: .gitignore  CMakeLists.txt  iRobotCreate.C  iRobotCreate.H
Arduino/hermes/: HMC5883L.h  actions.ino  hermes.h  hermes.ino  sensors.ino
Arduino/servo/: servo.ino
DEMO/censor/: CMakeLists.txt  censor.cpp  censor.cpp~  censor.h  censor.h~  manifest.yaml  manifest.yaml~
DEMO/myPoster/: CMakeLists.txt  CMakeLists.txt~  myPoster.cpp  myPoster.cpp~  myPoster.h
DEMO/mySubscriber/: CMakeLists.txt  MySubscriber.cpp  MySubscriber.h  manifest.yaml
Messages/Controllers/: JoystickMessage.H
Messages/ImageProc/: CompressedImageMessage.H  DepthImageMetadataMessage.H  GenericImageMessage.H  StereoPairMessage.H
Messages/ImageProc/details/: CompressedImageMessageImpl.H
Messages/Navigation/: PathMessage.H
Messages/PointCloud/: GenericCloudMessage.H  IndicesMessage.H
Messages/Sensors/: GPSMessage.H
Robotics/Drivers/Hermes/: CMakeLists.txt  Hermes.C  Hermes.H  HermesModule.C  HermesModule.H  Serial.C  hermescmd.py  loadHermes.py  loadHermesSensing.py  manifest.yaml  test-hermes-joystick.py  test.py
Robotics/Drivers/iRobotCreate/: iRobotCreate.C  iRobotCreate.H  manifest.yaml
Robotics/ImageProc/ImageCompressor/: CMakeLists.txt  ImageCompressorModule.C  ImageCompressorModule.H  manifest.yaml
Robotics/ImageProc/ImageDecompressor/: CMakeLists.txt  ImageDecompressorModule.C  ImageDecompressorModule.H  manifest.yaml
Robotics/ImageProc/StereoDepth/: CMakeLists.txt  StereoDepthModule.C  StereoDepthModule.H
Robotics/ImageProc/StereoRectifier/: StereoRectifierModule.C  StereoRectifierModule.H  calibrateCameras.cpp  manifest.yaml
Robotics/Navigation/AStarPathPlanner/: AStarPathPlanner.C  AStarPathPlanner.H  CMakeLists.txt  manifest.yaml
Robotics/Navigation/DeadReckoning/: CMakeLists.txt  DeadReckoningModule.C  DeadReckoningModule.H  manifest.yaml
Robotics/Navigation/GlobalPlanner/: CMakeLists.txt  GlobalPlanner.C  GlobalPlanner.H  Makefile  manifest.yaml  occupancy.cpp
Robotics/Navigation/PID/: CMakeLists.txt  (+2 more)
Robotics/PointCloud/OpenNISource/: CMakeLists.txt  OpenNISourceModule.C  OpenNISourceModule.H  manifest.yaml
Robotics/Sensing/ImageProc/StereoRectifier/: CMakeLists.txt  StereoCalibrationData.H  StereoRectifierModule.C  calibrateCameras.cpp
Robotics/Utils/TransformVisualizer/: CMakeLists.txt  TransformVisualizerModule.C  TransformVisualizerModule.H  manifest.yaml
Utilities/DesignerServer/: CMakeLists.txt  DesignerServerModule.C  DesignerServerModule.H  MessageSerializers.H  Server.C  Server.H  WampServer.cpp  WampServer.h  WampServerFactory.cpp  WampServerFactory.h  WampSession.cpp  WampSession.h  manifest.yaml  runServer  runServer.C  test-server.c  test-server.cpp
Utilities/DesignerServer/files/: index.html
Utilities/DesignerServer/files/js/: nrt_protocol.js
iOS/iNRTJoystick/: README  test.c
(+198 files in other folders)
